Fixed horizontal scrolling issue

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -52,7 +52,8 @@ body {
 html, body {
   color: #f2f2f2;
   background-color: rgb(22, 22, 22);
-  font-family: SFPro-Rounded-Bold
+  font-family: SFPro-Rounded-Bold;
+  overflow-x: hidden;
 }
 
 li {
